# modeler

./: .gitattributes  .gitignore  Makefile  README  README.md  hexdump_include.sh  imgtorgba.sh  vert.spv
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/cpp/: CMakeLists.txt  main.c
android/gradle/wrapper/: gradle-wrapper.properties
src/: allocator.c  allocator.h  buffer.c  buffer.h  chess.h  chess_board.c  chess_board.h  chess_engine.c  chess_engine.h  command_buffer.c  command_buffer.h  command_pool.c  command_pool.h  component.h  descriptor.c  descriptor.h  device.c  device.h  framebuffer.c  framebuffer.h  image.c  image.h  imageView.c  image_view.c  image_view.h  inputEvent.c  inputEvent.h  input_event.c  input_event.h  instance.c  instance.h  main_wayland.c  main_win32.c  matrix_utils.c  matrix_utils.h  modeler.c  modeler.h  modeler_android.c  modeler_android.h  modeler_metal.c  (+44 more)
src/game-activity/: GameActivity.h
src/game-activity/native_app_glue/: android_native_app_glue.h
src/imgui/: cimgui.cpp  cimgui.h  cimgui_impl_vulkan.h  dcimgui_impl_vulkan.h  imgui_impl_modeler.c  imgui_impl_modeler.h  imgui_impl_vulkan.cpp  imgui_impl_vulkan.h  imgui_internal.h
src/meshes/: pieces.3dm
src/shaders/: chess_board.frag.glsl  chess_board.vert.glsl  imgui.vert.glsl  phong.frag.glsl  phong.vert.glsl  titlebar.frag.glsl  titlebar.vert.glsl  triangle.frag.glsl  triangle.vert.glsl  window_border.frag.glsl  window_border.vert.glsl
xcode/modeler/: AppDelegate.swift  ModelerApp.swift  ModelerView.swift  ModelerViewController.swift  ModelerViewControllerRepresentable.swift  ModelerViewRepresentable.swift  ModelerWindow.swift  ModelerWindowController.swift  modeler-Bridging-Header.h  modelerApp.swift
xcode/modeler-ios/: LaunchScreen.storyboard  ModelerApp.swift  ModelerView.swift  ModelerViewController.swift  ModelerViewControllerRepresentable.swift  ModelerViewRepresentable.swift  SceneDelegate.swift
xcode/modeler.xcodeproj/: project.pbxproj
xcode/modeler.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
xcode/vulkan/explicit_layer.d/: VkLayer_api_dump.json  VkLayer_khronos_profiles.json  VkLayer_khronos_shader_object.json  VkLayer_khronos_synchronization2.json  VkLayer_khronos_validation.json
(+9 files in other folders)
